product is working and producing a readme file that is html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
     <div id='bodyInfo'>
         <h2 id="installation">Installation: undefined</h2><br>
-        <h2 id="license">License: MIT</h2><br>
+        <h2 id="license">License: d</h2><br>
         <h2 id='usage'>Usage: d</h2><br>
         <h2 id='contribution'>Contribution Guidelines: d</h2><br>
         <h2 id='tests'>Test Instructions: d</h2><br>
